--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+
+#laravel-ide-helper files
+.phpstorm.meta.php
+_ide_helper_models.php
+_ide_helper.php
